server/7.6/rest-api/rest-buckets-summary.md
---
title: Getting Bucket Information
description: Information on buckets defined on the cluster can be retrieved, by
  means of the REST API.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-server/edit/release/7.6/modules/rest-api/pages/rest-buckets-summary.adoc
  xref: xref:7.6@server:rest-api:rest-buckets-summary.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.6/rest-api/rest-buckets-summary.html)

# Getting Bucket Information

> Information on buckets defined on the cluster can be retrieved, by means of the REST API. 

## [](#http-methods-and-uris)HTTP Methods and URIs

GET /pools/default/buckets

GET /pools/default/buckets/<bucket-name>

## [](#description)Description

`GET /pools/default/buckets` retrieves information on all buckets defined on the cluster. If the `<bucket-name>` path-parameter is added, only information on the specified bucket is retrieved.

## [](#curl-syntax)Curl Syntax

curl -X GET http://<ip-address-or-domain-name>:8091/pools/default/buckets/<bucket-name>

## [](#responses)Responses

Successful execution returns `200 OK`, and either an object containing information on the individual bucket specified by the path-parameter; or an array of such objects, each containing information on one of the buckets defined on the cluster.

Failure to authenticate returns `401 Unauthorized`. An incorrectly specified URI returns `404 Object Not Found`. If an internal error prevents successful execution, `500 Internal Server Error` is returned.

## [](#example)Example

The following example returns information on a single bucket named `travel-sample`. The output of the call is piped to [jq](https://stedolan.github.io/jq/) to improve readability.

curl -X GET -u Administrator:password \
http://localhost:8091/pools/default/buckets/travel-sample | jq '.'

If successful, the call returns `200 OK`, and an object similar to the one shown in the following example.

> [!NOTE]
> The output contains an extensive array of vBucket data that is omitted from this example.

The fields `historyRetentionCollectionDefault`, `historyRetentionCollectionBytes`, and `historyRetentionCollectionSeconds` are specific to Magma storage. When the bucket does not use Magma as its storage backend, these properties do not appear in the output.

```json
{
  "name": "travel-sample",
  "nodeLocator": "vbucket",
  "bucketType": "membase",
  "storageBackend": "couchstore",
  "uuid": "85ff541d1f4cfbc9e67cda3db698cac6",
  "uri": "/pools/default/buckets/travel-sample?bucket_uuid=85ff541d1f4cfbc9e67cda3db698cac6",
  "streamingUri": "/pools/default/bucketsStreaming/travel-sample?bucket_uuid=85ff541d1f4cfbc9e67cda3db698cac6",
  "numVBuckets": 1024,
  "bucketCapabilitiesVer": "",
  "bucketCapabilities": [
    "collections",
    "durableWrite",
    "tombstonedUserXAttrs",
    "couchapi",
    "subdoc.ReplaceBodyWithXattr",
    "subdoc.DocumentMacroSupport",
    "subdoc.ReviveDocument",
    "dcp.IgnorePurgedTombstones",
    "preserveExpiry",
    "querySystemCollection",
    "mobileSystemCollection",
    "subdoc.ReplicaRead",
    "rangeScan",
    "dcp",
    "cbhello",
    "touch",
    "cccp",
    "xdcrCheckpointing",
    "nodesExt",
    "xattr"
  ],
  "collectionsManifestUid": "2",
  "ddocs": {
    "uri": "/pools/default/buckets/travel-sample/ddocs"
  },
  "vBucketServerMap": {
    "hashAlgorithm": "CRC",
    "numReplicas": 1,
    "serverList": [
      "node1.:11210",
      "node2.:11210",
      "node3.:11210"
    ],
    "vBucketMap": [
      [
        0,
        1
      ],
      [
        0,
        1
      ],
      .
      .
      .
      [
        2,
        1
      ]
    ]
  },
  "localRandomKeyUri": "/pools/default/buckets/travel-sample/localRandomKey",
  "controllers": {
    "compactAll": "/pools/default/buckets/travel-sample/controller/compactBucket",
    "compactDB": "/pools/default/buckets/travel-sample/controller/compactDatabases",
    "purgeDeletes": "/pools/default/buckets/travel-sample/controller/unsafePurgeBucket",
    "startRecovery": "/pools/default/buckets/travel-sample/controller/startRecovery"
  },
  "nodes": [
    {
      "couchApiBaseHTTPS": "https://node3.:18092/travel-sample%2B85ff541d1f4cfbc9e67cda3db698cac6",
      "couchApiBase": "http://node3.:8092/travel-sample%2B85ff541d1f4cfbc9e67cda3db698cac6",
      "clusterMembership": "active",
      "recoveryType": "none",
      "status": "healthy",
      "otpNode": "ns_1@node3.",
      "hostname": "node3.:8091",
      "nodeUUID": "d6bfd3cccf28f3e648bca46cb30ac271",
      "clusterCompatibility": 524288,
      "version": "8.0.0-1649-enterprise",
      "os": "aarch64-unknown-linux-gnu",
      "cpuCount": 4,
      "ports": {
        "direct": 11210,
        "httpsMgmt": 18091,
        "httpsCAPI": 18092,
        "distTCP": 21100,
        "distTLS": 21150
      },
      "services": [
        "backup",
        "index",
        "kv",
        "n1ql"
      ],
      "nodeEncryption": false,
      "nodeEncryptionClientCertVerification": false,
      "addressFamilyOnly": false,
      "configuredHostname": "node3.:8091",
      "addressFamily": "inet",
      "externalListeners": [
        {
          "afamily": "inet",
          "nodeEncryption": false
        }
      ],
      "serverGroup": "Group 1",
      "replication": 1,
      "nodeHash": 48264202,
      "systemStats": {
        "cpu_utilization_rate": 10.20000000018626,
        "cpu_stolen_rate": 0,
        "swap_total": 2147479552,
        "swap_used": 396525568,
        "mem_total": 8327258112,
        "mem_free": 1855406080,
        "mem_limit": 8327258112,
        "cpu_cores_available": 4,
        "allocstall": 37181
      },
      "interestingStats": {
        "cmd_get": 0,
        "couch_docs_actual_disk_size": 48142369,
        "couch_docs_data_size": 32943627,
        "couch_spatial_data_size": 0,
        "couch_spatial_disk_size": 0,
        "couch_views_actual_disk_size": 0,
        "couch_views_data_size": 0,
        "curr_items": 21189,
        "curr_items_tot": 42289,
        "ep_bg_fetched": 0,
        "get_hits": 0,
        "index_data_size": 37010997,
        "index_disk_size": 16332886,
        "mem_used": 63213008,
        "ops": 0,
        "vb_active_num_non_resident": 0,
        "vb_replica_curr_items": 21100
      },
      "uptime": "788913",
      "memoryTotal": 8327258112,
      "memoryFree": 1855406080,
      "mcdMemoryReserved": 6353,
      "mcdMemoryAllocated": 6353
    },
    {
      "couchApiBaseHTTPS": "https://node2.:18092/travel-sample%2B85ff541d1f4cfbc9e67cda3db698cac6",
      "couchApiBase": "http://node2.:8092/travel-sample%2B85ff541d1f4cfbc9e67cda3db698cac6",
      "clusterMembership": "active",
      "recoveryType": "none",
      "status": "healthy",
      "otpNode": "ns_1@node2.",
      "hostname": "node2.:8091",
      "nodeUUID": "b737df3d566f6c6ccb2bcafec61e85a2",
      "clusterCompatibility": 524288,
      "version": "8.0.0-1649-enterprise",
      "os": "aarch64-unknown-linux-gnu",
      "cpuCount": 4,
      "ports": {
        "direct": 11210,
        "httpsMgmt": 18091,
        "httpsCAPI": 18092,
        "distTCP": 21100,
        "distTLS": 21150
      },
      "services": [
        "eventing",
        "fts",
        "kv",
        "n1ql"
      ],
      "nodeEncryption": false,
      "nodeEncryptionClientCertVerification": false,
      "addressFamilyOnly": false,
      "configuredHostname": "node2.:8091",
      "addressFamily": "inet",
      "externalListeners": [
        {
          "afamily": "inet",
          "nodeEncryption": false
        }
      ],
      "serverGroup": "Group 1",
      "replication": 1,
      "nodeHash": 34469021,
      "systemStats": {
        "cpu_utilization_rate": 10.23397660196727,
        "cpu_stolen_rate": 0,
        "swap_total": 2147479552,
        "swap_used": 396525568,
        "mem_total": 8327258112,
        "mem_free": 1855901696,
        "mem_limit": 8327258112,
        "cpu_cores_available": 4,
        "allocstall": 37181
      },
      "interestingStats": {
        "cmd_get": 0,
        "couch_docs_actual_disk_size": 56100897,
        "couch_docs_data_size": 32866921,
        "couch_spatial_data_size": 0,
        "couch_spatial_disk_size": 0,
        "couch_views_actual_disk_size": 0,
        "couch_views_data_size": 0,
        "curr_items": 21118,
        "curr_items_tot": 42167,
        "ep_bg_fetched": 0,
        "get_hits": 0,
        "mem_used": 63213888,
        "ops": 0,
        "vb_active_num_non_resident": 0,
        "vb_replica_curr_items": 21049
      },
      "uptime": "788913",
      "memoryTotal": 8327258112,
      "memoryFree": 1855901696,
      "mcdMemoryReserved": 6353,
      "mcdMemoryAllocated": 6353
    },
    {
      "couchApiBaseHTTPS": "https://node1.:18092/travel-sample%2B85ff541d1f4cfbc9e67cda3db698cac6",
      "couchApiBase": "http://node1.:8092/travel-sample%2B85ff541d1f4cfbc9e67cda3db698cac6",
      "clusterMembership": "active",
      "recoveryType": "none",
      "status": "healthy",
      "otpNode": "ns_1@node1.",
      "thisNode": true,
      "hostname": "node1.:8091",
      "nodeUUID": "87a797d06f374f8006cc4a3a683db4e1",
      "clusterCompatibility": 524288,
      "version": "8.0.0-1649-enterprise",
      "os": "aarch64-unknown-linux-gnu",
      "cpuCount": 4,
      "ports": {
        "direct": 11210,
        "httpsMgmt": 18091,
        "httpsCAPI": 18092,
        "distTCP": 21100,
        "distTLS": 21150
      },
      "services": [
        "cbas",
        "index",
        "kv",
        "n1ql"
      ],
      "nodeEncryption": false,
      "nodeEncryptionClientCertVerification": false,
      "addressFamilyOnly": false,
      "configuredHostname": "node1.:8091",
      "addressFamily": "inet",
      "externalListeners": [
        {
          "afamily": "inet",
          "nodeEncryption": false
        }
      ],
      "serverGroup": "Group 1",
      "replication": 1,
      "nodeHash": 72627629,
      "systemStats": {
        "cpu_utilization_rate": 10.24295140934561,
        "cpu_stolen_rate": 0,
        "swap_total": 2147479552,
        "swap_used": 396525568,
        "mem_total": 8327258112,
        "mem_free": 1854889984,
        "mem_limit": 8327258112,
        "cpu_cores_available": 4,
        "allocstall": 37181
      },
      "interestingStats": {
        "cmd_get": 0,
        "couch_docs_actual_disk_size": 44320702,
        "couch_docs_data_size": 32823159,
        "couch_spatial_data_size": 0,
        "couch_spatial_disk_size": 0,
        "couch_views_actual_disk_size": 0,
        "couch_views_data_size": 0,
        "curr_items": 21036,
        "curr_items_tot": 42230,
        "ep_bg_fetched": 0,
        "get_hits": 0,
        "index_data_size": 38186104,
        "index_disk_size": 23976600,
        "mem_used": 62882016,
        "ops": 0,
        "vb_active_num_non_resident": 0,
        "vb_replica_curr_items": 21194
      },
      "uptime": "788913",
      "memoryTotal": 8327258112,
      "memoryFree": 1854889984,
      "mcdMemoryReserved": 6353,
      "mcdMemoryAllocated": 6353
    }
  ],
  "stats": {
    "uri": "/pools/default/buckets/travel-sample/stats",
    "directoryURI": "/pools/default/buckets/travel-sample/stats/Directory",
    "nodeStatsListURI": "/pools/default/buckets/travel-sample/nodes"
  },
  "authType": "sasl",
  "autoCompactionSettings": false,
  "replicaIndex": false,
  "rank": 0,
  "enableCrossClusterVersioning": false,
  "versionPruningWindowHrs": 720,
  "replicaNumber": 1,
  "threadsNumber": 3,
  "quota": {
    "ram": 629145600,
    "rawRAM": 209715200
  },
  "basicStats": {
    "quotaPercentUsed": 30.08984120686849,
    "opsPerSec": 0,
    "diskFetches": 0,
    "itemCount": 63343,
    "diskUsed": 148563968,
    "dataUsed": 98633707,
    "memUsed": 189308912,
    "vbActiveNumNonResident": 0
  },
  "evictionPolicy": "fullEviction",
  "durabilityMinLevel": "none",
  "pitrEnabled": false,
  "pitrGranularity": 600,
  "pitrMaxHistoryAge": 86400,
  "conflictResolutionType": "seqno",
  "maxTTL": 0,
  "compressionMode": "passive",
  "accessScannerEnabled": false
}
```

> [!NOTE]
> Couchbase Server version 7.6.2 added a property named `enableCrossClusterVersioning` to support a future feature. Do not change the value of this field. Once enabled, you cannot turn it off. See the [Notes](rest-bucket-create.md#notes) section of [Creating and Editing Buckets](rest-bucket-create.md) for more information.

## [](#see-also)See Also

An overview of buckets is provided in [Buckets](../learn/buckets-memory-and-storage/buckets.md). An introduction to scopes and collections is provided in [Scopes and Collections](../learn/data/scopes-and-collections.md).